<resources>
    <string name="app_name">siska-e</string>
    <string name="todo">TODO</string>
    <string name="option_logo">siska-e</string>
    <string name="option_title">Masuk Sebagai</string>
    <string name="option_student">Mahasiswa</string>
    <string name="option_lecturer">Dosen</string>
    <string name="option_or">Atau</string>
    <string name="login_email">Email</string>
    <string name="login_email_hint">Cth: lindase@gmail.com</string>
    <string name="login_password">Kata Sandi</string>
    <string name="login_password_hint">********</string>
    <string name="login_confrim">Masuk</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_guidance">Bimbingan</string>
    <string name="menu_class">Kelas</string>
    <string name="menu_profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guidance_title">Bimbingan</string>
</resources>