<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.LoginActivity">

    <ImageView
        android:id="@+id/iv_bg"
        style="@style/ImageViewBackground"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text= "@string/option_logo"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/cv_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_container"
        style="@style/CardViewContainerLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_email"
                style="@style/TextViewContentC"
                android:text="@string/login_email"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/TextInput"
                android:hint="@string/login_email_hint"/>

            <TextView
                android:id="@+id/tv_password"
                style="@style/TextViewContentC"
                android:text="@string/login_password"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/TextInput"
                android:hint="@string/login_password_hint"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_confrim"
        style="@style/MaterialButton"
        android:layout_marginTop="30dp"
        android:text="@string/login_confrim"
        app:layout_constraintEnd_toEndOf="@+id/cv_container"
        app:layout_constraintStart_toStartOf="@+id/cv_container"
        app:layout_constraintTop_toBottomOf="@+id/cv_container" />



</androidx.constraintlayout.widget.ConstraintLayout>